--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- link local assets, stylesheet cdn's (bootstrap, fonts), and define the title -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,12 +14,16 @@
   </head>
 
   <body>
+    <!-- title and subtitle header with the current date -->
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <!-- planner container with time blocks -->
     <main class="container-lg px-5">
+      <!-- duplicate time block div for each standard business hour -->
+      <!-- includes hour indicator, textarea, and save button column -->
       <div id="hour-9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
@@ -83,6 +88,8 @@
         </button>
       </div>
     </main>
+
+    <!-- link to third party APIs (jQuery and day.js) and script file -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous" ></script>
     <script src="./assets/script.js"></script>
